# soloud

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-build.yml
include/: soloud.h  soloud.hpp  soloud_audiosource.h  soloud_audiosource.hpp  soloud_bassboostfilter.h  soloud_bassboostfilter.hpp  soloud_biquadresonantfilter.h  soloud_biquadresonantfilter.hpp  soloud_bus.hpp  soloud_dcremovalfilter.h  soloud_dcremovalfilter.hpp  soloud_duckfilter.h  soloud_duckfilter.hpp  soloud_echofilter.h  soloud_echofilter.hpp  soloud_engine.hpp  soloud_eqfilter.h  soloud_eqfilter.hpp  soloud_error.hpp  soloud_fader.h  soloud_fader.hpp  soloud_fft.h  soloud_fft.hpp  soloud_fftfilter.h  soloud_fftfilter.hpp  soloud_file.h  soloud_file.hpp  soloud_filter.h  soloud_filter.hpp  soloud_flangerfilter.h  soloud_flangerfilter.hpp  soloud_freeverbfilter.h  soloud_freeverbfilter.hpp  soloud_internal.h  soloud_internal.hpp  soloud_lofifilter.h  soloud_lofifilter.hpp  soloud_misc.h  soloud_misc.hpp  soloud_monotone.h  (+26 more)
src/audiosource/: Elements.def  darray.cpp  darray.h  dr_mp3.h  klatt.cpp  klatt.h  legal_readme.txt  resonator.cpp  resonator.hpp  soloud_monotone.cpp  soloud_noise.cpp  soloud_sfxr.cpp  soloud_speech.cpp  soloud_wav.cpp  soloud_wavstream.cpp  stb_vorbis.c  tts.cpp  tts.h
src/audiosource/monotone/: soloud_monotone.cpp
src/audiosource/noise/: soloud_noise.cpp
src/audiosource/openmpt/: soloud_openmpt.cpp  soloud_openmpt_dll.c
src/audiosource/sfxr/: soloud_sfxr.cpp
src/audiosource/speech/: darray.cpp  klatt.cpp  resonator.cpp  soloud_speech.cpp  tts.cpp
src/audiosource/vic/: soloud_vic.cpp
src/audiosource/vizsn/: soloud_vizsn.cpp
src/audiosource/wav/: soloud_wav.cpp  soloud_wavstream.cpp  stb_vorbis.c
src/backend/: soloud_alsa.cpp  soloud_coreaudio.cpp  soloud_opensles.cpp  soloud_sdl2_static.cpp  soloud_vita_homebrew.cpp  soloud_wasapi.cpp  soloud_winmm.cpp  soloud_xaudio2.cpp
src/backend/alsa/: soloud_alsa.cpp
src/backend/coreaudio/: soloud_coreaudio.cpp
src/backend/opensles/: soloud_opensles.cpp
src/backend/sdl2_static/: soloud_sdl2_static.cpp
src/backend/vita_homebrew/: soloud_vita_homebrew.cpp
src/backend/wasapi/: soloud_wasapi.cpp
src/backend/winmm/: soloud_winmm.cpp
src/backend/xaudio2/: soloud_xaudio2.cpp
src/core/: soloud.cpp  soloud_audiosource.cpp  soloud_bus.cpp  soloud_core_3d.cpp  soloud_core_basicops.cpp  soloud_core_faderops.cpp  soloud_core_filterops.cpp  soloud_core_getters.cpp  soloud_core_setters.cpp  soloud_core_voicegroup.cpp  soloud_core_voiceops.cpp  soloud_fader.cpp  soloud_fft.cpp  soloud_fft.hpp  soloud_fft_lut.cpp  soloud_file.cpp  soloud_filter.cpp  soloud_internal.hpp  soloud_misc.cpp  soloud_queue.cpp  soloud_thread.cpp
src/filter/: soloud_bassboostfilter.cpp  soloud_biquadresonantfilter.cpp  soloud_dcremovalfilter.cpp  soloud_duckfilter.cpp  soloud_echofilter.cpp  soloud_eqfilter.cpp  soloud_fftfilter.cpp  soloud_flangerfilter.cpp  soloud_freeverbfilter.cpp  soloud_lofifilter.cpp  soloud_robotizefilter.cpp  soloud_waveshaperfilter.cpp
